# laba2

./: CMakeLists.txt  app.py  main.txt  tests.txt
include/: exceptions.hpp  option.hpp
include/core/: dynamic_array.hpp  linked_list.hpp
include/iterators/: array_enumerator.hpp  bit_enumerator.hpp  ienumerable.hpp  ienumerator.hpp  list_enumerator.hpp
include/sequences/: array_sequence.hpp  bit_sequence.hpp  deque_sequence.hpp  ienumerator.hpp  immutable_array_sequence.hpp  list_sequence.hpp  mutable_array_sequence.hpp  sequence.hpp
include/utils/: person.hpp  student.hpp  teacher.hpp
src/: main.cpp
static/: script.js
templates/: index.html
tests/: tests.cpp
